--- a/paginaweb/formulario.html
+++ b/paginaweb/formulario.html
@@ -17,7 +17,7 @@
     
     <div class="content">
 
-        <h1 class="logo">Pizzeria <span>FRANATI</span></h1>
+        <h1 class="logo">Pizzeriaa <span>FRANATI</span></h1>
 
         <div class="contact-wrapper animated bounceInUp">
             <div class="contact-form">
